# trusted-kms

./: Cargo.toml  Dockerfile  Makefile  README.md  build.rs  kms.yaml
protos/: api.proto
src/: config.rs  lib.rs
src/kms/: ca.rs  mod.rs
src/storage/: mod.rs
test/: ca.conf  ca.crt  ca.key  config.toml  generate-key.sh
